# FairPlay

./: README.md  pyproject.toml  survey_responses2.xlsx
.devcontainer/: devcontainer.json
.streamlit/: .gitignore
streamlit/: .gitignore  negotiation_chat.py
