[tool.poetry]
name = "interactionplatform"
version = "0.1.0"
description = "A Streamlit application for real-time interactions."
authors = ["Veronika Tsishetska <veronikatsishetska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0" 
openai = "^1.34.0"
pandas = "^1.4.0" 
streamlit-aggrid = "^0.3.2" 
pydrive = "^1.3.1"
openpyxl = "^3.1.4"
google = "^3.0.0"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
streamlit-extras = "^0.4.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

